fixing header spacing

--- a/app/assets/stylesheets/clear_cms/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/clear_cms/bootstrap_and_overrides.css.less
@@ -58,6 +58,10 @@ li {
     text-shadow: none;
 
   }
+
+  &.dropdown-header {
+    margin: 5px 0 0 10px;
+  }
 }
 
 legend {
